--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_EMAILJS_SERVICE_ID=service_7d1rdnu
 VITE_EMAILJS_TEMPLATE_ID=template_pi90lov
 VITE_EMAILJS_PUBLIC_KEY=jSzN1nnBCyfWN1SA3
 
-# For Create React App projects (alternative)
 REACT_APP_EMAILJS_SERVICE_ID=service_7d1rdnu
 REACT_APP_EMAILJS_TEMPLATE_ID=template_pi90lov
 REACT_APP_EMAILJS_PUBLIC_KEY=jSzN1nnBCyfWN1SA3
+VITE_CHATBASE_BOT_ID=jA4fe7RSImUpnnI1uEZb_
